--- a/css/layout.css
+++ b/css/layout.css
@@ -118,10 +118,11 @@ header {
 
             .student-item, 
             .work-item {
-                width:    auto;
-                height:   auto;
-                margin:   0 auto;
-                padding:  0vh 4vh 0vh 4vh;  
+                width:             auto;
+                height:            auto;
+                margin:            1vh auto 1vh auto;
+                padding:           0.5vh 4vw 0.5vh 4vw;
+                background-color:  rgba(0, 128, 128, 0.1);
             }
 
 
@@ -246,10 +247,11 @@ header {
     
                 .student-item, 
                 .work-item {
-                    width:    auto;
-                    height:   auto;
-                    margin:   0 auto;
-                    padding:  0 auto;  
+                    width:             auto;
+                    height:            auto;
+                    margin:            1vh auto 1vh auto;
+                    padding:           0.5vh 4vw 0.5vh 4vw;
+                    background-color:  rgba(0, 128, 128, 0.1);
                 }
     
 }
