--- a/css/layout.css
+++ b/css/layout.css
@@ -195,20 +195,20 @@ header {
             right:          4vh;
     
             width:          calc(100vw - 16vh);
-            height:         25vh;
+            height:         20vh;
             padding:        2vh 4vw 0vh 4vw;
 
-            /*background-color: aqua;*/
+            background-color: aqua;
         }
     
         .section {
             position:         absolute;
-            top:              37vh;
+            top:              34vh;
             left:             4vh;
             right:            4vh;
     
             width:            calc(100vw - 12vh);
-            height:           35vh;
+            height:           38vh;
             margin:           0 auto;
             padding:          0 auto;
     
