--- a/css/layout.css
+++ b/css/layout.css
@@ -198,7 +198,7 @@ header {
             height:         20vh;
             padding:        2vh 4vw 0vh 4vw;
 
-            background-color: aqua;
+            /*background-color: aqua;*/
         }
     
         .section {
